### Changed - レイアウト調整

--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -100,7 +100,7 @@ Aa-10
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table">
-                        <thead>
+                        <thead class="text-primary">
                             <tr>
                                 <th>作品コード</th>
                                 <th class="text-left">作品名<br>サブタイトル</th>
